Update GeneScore to store and return scores as native doubles