@@ -59,30 +59,30 @@ public class GeneScoreTest {
     @Test
     public void getCombinedScore() {
         GeneScore instance = GeneScore.builder()
-                .combinedScore(1f)
+                .combinedScore(1d)
                 .build();
-        assertThat(instance.getCombinedScore(), equalTo(1f));
+        assertThat(instance.getCombinedScore(), equalTo(1d));
     }
 
     @Test
     public void getPhenotypeScore() {
         GeneScore instance = GeneScore.builder()
-                .phenotypeScore(1f)
+                .phenotypeScore(1d)
                 .build();
-        assertThat(instance.getPhenotypeScore(), equalTo(1f));
+        assertThat(instance.getPhenotypeScore(), equalTo(1d));
     }
 
     @Test
     public void getVariantScore() {
         GeneScore instance = GeneScore.builder()
-                .variantScore(1f)
+                .variantScore(1d)
                 .build();
-        assertThat(instance.getVariantScore(), equalTo(1f));
+        assertThat(instance.getVariantScore(), equalTo(1d));
     }
 
     @Test
     public void getContributingVariants() {
-        List<VariantEvaluation> contributingVariants = Arrays.asList(
+        List<VariantEvaluation> contributingVariants = List.of(
                 TestFactory.variantBuilder(1, 12335, "T", "C").build(),
                 TestFactory.variantBuilder(1, 23446, "A", "T").build()
         );
@@ -100,14 +100,14 @@ public class GeneScoreTest {
 
     @Test
     public void testMaxCombinedScore() {
-        GeneScore max = GeneScore.builder().combinedScore(1f).build();
-        GeneScore other = GeneScore.builder().combinedScore(0.5f).build();
+        GeneScore max = GeneScore.builder().combinedScore(1d).build();
+        GeneScore other = GeneScore.builder().combinedScore(0.5).build();
 
         assertThat(GeneScore.max(max, other), equalTo(max));
         assertThat(GeneScore.max(other, max), equalTo(max));
 
-        GeneScore positiveZero = GeneScore.builder().combinedScore(0f).build();
-        GeneScore negativeZero = GeneScore.builder().combinedScore(-0f).build();
+        GeneScore positiveZero = GeneScore.builder().combinedScore(0).build();
+        GeneScore negativeZero = GeneScore.builder().combinedScore(-0).build();
 
         assertThat(GeneScore.max(positiveZero, negativeZero), equalTo(positiveZero));
         assertThat(GeneScore.max(negativeZero, positiveZero), equalTo(positiveZero));
@@ -121,27 +121,27 @@ public class GeneScoreTest {
 
         // After an analysis, a single gene will have different scores due to different inheritance modes but these have
         // been omitted for clarity of what is actually being tested
-        GeneScore one = GeneScore.builder().combinedScore(1f).geneIdentifier(first).build();
-        GeneScore two = GeneScore.builder().combinedScore(0.5f).geneIdentifier(first).build();
-        GeneScore three =  GeneScore.builder().combinedScore(0.5f).geneIdentifier(second).build();
-        GeneScore four =  GeneScore.builder().combinedScore(0.25f).geneIdentifier(second).build();
-        GeneScore five =  GeneScore.builder().combinedScore(0.25f).geneIdentifier(third).build();
-        GeneScore six =  GeneScore.builder().combinedScore(0.125f).geneIdentifier(third).build();
+        GeneScore one = GeneScore.builder().combinedScore(1d).geneIdentifier(first).build();
+        GeneScore two = GeneScore.builder().combinedScore(0.5).geneIdentifier(first).build();
+        GeneScore three = GeneScore.builder().combinedScore(0.5).geneIdentifier(second).build();
+        GeneScore four = GeneScore.builder().combinedScore(0.25).geneIdentifier(second).build();
+        GeneScore five = GeneScore.builder().combinedScore(0.25).geneIdentifier(third).build();
+        GeneScore six = GeneScore.builder().combinedScore(0.125).geneIdentifier(third).build();
 
         List<GeneScore> geneScores = Arrays.asList(two, three, six, one, five, four);
 
         geneScores.sort(GeneScore::compareTo);
 
-        assertThat(geneScores, equalTo(Arrays.asList(one, two, three, four, five, six)));
+        assertThat(geneScores, equalTo(List.of(one, two, three, four, five, six)));
     }
 
     @Test
     public void testToString() {
         GeneScore instance = GeneScore.builder()
                 .geneIdentifier(GeneIdentifier.builder().geneSymbol("TEST1").geneId("HGNC:12345").build())
-                .combinedScore(1f)
-                .phenotypeScore(1f)
-                .variantScore(1f)
+                .combinedScore(1)
+                .phenotypeScore(1)
+                .variantScore(1)
                 .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
                 .build();
         assertThat(instance.toString(), equalTo("GeneScore{geneIdentifier=GeneIdentifier{geneId='HGNC:12345', geneSymbol='TEST1', hgncId='', hgncSymbol='', entrezId='', ensemblId='', ucscId=''}, modeOfInheritance=AUTOSOMAL_DOMINANT, combinedScore=1.0, phenotypeScore=1.0, variantScore=1.0, contributingVariants=[]}"));
